tests/ui/impl-trait/rpit/precise-capture-155151.current.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/precise-capture-155151.rs:19:22
   |
LL |             let Foo { x } = foo;
   |                       - binding declared here but left uninitialized
...
LL |             let _y = x;
   |                      ^ `x` used here but it isn't initialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
